fix markup and styling
- Nitpick: lowercase `lang` property.
- "eng" is not a valid language code. You want `en` or `en-US`. 
   See https://developer.mozilla.org/en-US/docs/Web/HTML/Global_attributes/lang
- Add standard meta author and description tags for better SEO. 
   See https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/The_head_metadata_in_HTML
- Use a `<p>` tag instead of `<h2>` for sub-titles. Using an H2 this way is actually explicitly un-semantic. See http://html5doctor.com/howto-subheadings/. You can use the same CSS styles, of course.
- Remove the `text-underline-offset` rule; it makes the underline disappear for under curls, which can look like a mistake.
- The `card` class and corresponding `div` are extraneous; you can remove them, moving the crimson to `html` and the "card" styles to `body`.
- Change the "contact" `span`s to the semantic `abbr` tag, and add a `title` attribute with the full name, e.g. for "E" put "Email". This is important for accessibility/screen readers and search engines, as well as sighted users.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
-<html Lang="eng">
+<html lang="en-US">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anna Stypulkowski - Web Developer</title>
-    <meta property="og:description" content="Anna Stypulkowski is a web developer based in Queens, New York">
+    <meta name="description" content="Anna Stypulkowski is a web developer based in Queens, New York. View her business card to get her contact information and see her work across the web.">
     <style>
-        body {
-            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-            font-size: 16px;
+        html {
             /*  find a new color that suits you https://colours.neilorangepeel.com/ brighter colors might work better (think NYC subway signs) */
             background-color: crimson;
+        }
+        body {
+            font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+            font-size: 16px;            
             display: grid;
             justify-content: center;
             align-content: center;
-        }
-        .card {
             background-color: white;
             padding: 3rem;
             margin: 2rem;
@@ -30,7 +30,7 @@
             font-size: 1.75rem;
             word-break: break-all;
         }
-        h2 {
+        .subtitle {
             margin: 0;
             font-size: 1.25rem;
             text-transform: uppercase;
@@ -54,8 +54,6 @@
         }
         a {
             color: black;
-            text-underline-offset: .05rem;
-            text-decoration-thickness: .15rem;
         }
         a:focus {
             background-color: black;
@@ -93,13 +91,13 @@
     <div class="card">
         <header>
             <h1>Anna Stypulkowski</h1>
-            <h2>Web Developer</h2>
+            <p class="subtitle">Web Developer</p>
         </header>
         <main>
             <ul>
-                <li><span class="contact">E</span> <a href="mailto:aniastypul@gmail.com">aniastypul@gmail.com</a></li>
-                <li><span class="contact">T</span> <a href="https://twitter.com/AnnaNanNanner">@AnnaNanNanner</a></li>
-                <li><span class="contact">W</span> <a href="http://annastypulkow.ski">annastypulkow.ski</a></li>
+                <li><abbr title="email">E</abbr> <a href="mailto:aniastypul@gmail.com">aniastypul@gmail.com</a></li>
+                <li><abbr title="twitter">T</abbr> <a href="https://twitter.com/AnnaNanNanner">@AnnaNanNanner</a></li>
+                <li><abbr title="website">W</abbr> <a href="http://annastypulkow.ski">annastypulkow.ski</a></li>
             </ul>
             <ul>
                 <li><a href="https://github.com/aniagaska">Github</a></li>
