Keep the business card shape
Instead of it being in the center of the page on large screens, it's to the left but it keeps the right size for a business card as you extend the page and I think the margins are a nice size

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Anna Stypulkowski - Web Developer</title>
     <meta name="description" content="Anna Stypulkowski is a web developer based in Queens, New York. View her business card to get her contact information and see her work across the web.">
     <style>
-       html {
+    html {
             /*  find a new color that suits you https://colours.neilorangepeel.com/ brighter colors might work better (think NYC subway signs) */
             background-color: crimson;
         }
@@ -20,6 +20,7 @@
             background-color: white;
             padding: 3rem;
             margin: 2rem;
+          max-width: 30rem;
         }
         h1 {
             margin: 0;
@@ -49,9 +50,9 @@
             font-size: .75rem;
         }
 
-abbr {
-  font-weight: bold;
-}
+        abbr {
+            font-weight: bold;
+        }
         .contact {
             font-weight: bold;
             text-transform: uppercase;
